--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="#990099"
     android:orientation="vertical">
 
     <TextView
+        android:background="#ff9988"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="#ffff"
+        android:textColor="#ffffff"
         android:textStyle="bold" />
 
 </LinearLayout>
